# libmacaroons

./: .cirrus.yml  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  README  base64.c  explicit_bzero.c  fuzzer-serializer.c  macaroons-inner.h  macaroons.c  macros.h  port.c  shim.c  shim_windows.c  tweetnacl.c  utf8check.h  v1.c  v2.c
.github/workflows/: build.yml  coverity.yml  fuzz.yml
bindings/python/: CMakeLists.txt  setup.py.in
test/unity/: CMakeLists.txt  macaroon_builder_tests.c  request_verify_tests.c  serialization_tests.c  strptime.c  test_helpers.c  unit_tests.c  utf8check_tests.c  varint_tests.c  verifier_tests.c
